--- a/views/iotProject.ejs
+++ b/views/iotProject.ejs
@@ -1,4 +1,5 @@
-<%= JSON.stringify(data) %>
+<%- include('_header') %>
+<% JSON.stringify(data) %>
 
 <h1> Hardware </h1>
 
@@ -37,3 +38,4 @@
     </tbody>
   </table>
 
+  <%- include ('_footer') %>
