--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -12,7 +12,7 @@
       }
   </style>
   <body>
-    <%= JSON.stringify(session) %>
+    <% JSON.stringify(session) %>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">CPEiot</a>
@@ -37,3 +37,16 @@
       <div class="row">
         <div class="col-md-11">
        
+          <% if(session.success==false){ %>
+            <% for(var i=0;i<session.error.errors.length;i++){ %>
+              <div class="alert alert-danger " role="alert" >
+              <%= session.error.errors[i]["msg"] %>
+            </div>
+          <% } session.success=null; } %>
+      
+          <% if(session.success==true){ %>
+              <div class="alert alert-success" role="alert">
+                <%= session.topic %>
+              </div>
+              
+          <% session.success=null; session.topic=null; }   %>
