Edit Final add IOT #3

--- a/views/influxRead.ejs
+++ b/views/influxRead.ejs
@@ -5,7 +5,7 @@
 <% JSON.stringify(dataemail) %>
 <% JSON.stringify(datauid) %>
 <% JSON.stringify(datapoint) %>
-<%= JSON.stringify(datatype) %>
+<% JSON.stringify(datatype) %>
 
 <h1>Device Owner Require List  </h1>
 <div class="d-grid gap-2 col-6 mx-auto">
