--- a/views/iotAir.ejs
+++ b/views/iotAir.ejs
@@ -21,7 +21,7 @@
       </div>
 <% if(pm25data!=null){ %>
     <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-success btn-lg" type="button"> RSSI : <%= pm25data  %> </button>
+        <button class="btn btn-success btn-lg" type="button"> PM 2.5 : <%= pm25data  %> </button>
     </div>
     <% }else{ %> 
         <div class="d-grid gap-2 col-6 mx-auto">
