Add Login and JWT #2

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -21,7 +21,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/">Home <span class="sr-only"></span></a>
+          <a class="nav-item nav-link active" href="/home">Home <span class="sr-only"></span></a>
           <a class="nav-item nav-link" href="/hardware">Hardware</a>
           <a class="nav-item nav-link" href="/device">Device</a>
           <a class="nav-item nav-link" href="/register">Register</a>
