Add JWT ALL Route  #1

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -29,6 +29,7 @@
           <a class="nav-item nav-link" href="/site">Site</a>
           <a class="nav-item nav-link" href="/room">Room</a>
           <a class="nav-item nav-link" href="/owner">Device Owner</a>
+          <a class="nav-item nav-link" href="/logout">Logout</a>
         </div>
       </div>
     </nav>
