--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,8 @@
 <section class="ftco-section">
 <div class="container">
 <div class="row justify-content-center">
-<div class="col-md-6 text-center mb-5">
-<h2 class="heading-section">Thesaban.org [IOT]</h2>
+<div class="col-md-6 text-center mb-3">
+<h2 class="heading-section">IOT @ Thesaban.org</h2>
 
 </div>
 </div>
