--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+	
+    <script src="/static/js/sweetalert.min.js"></script>
+    <script>
+      function submitForm(form) {
+          swal({
+              title: "Are you sure?",
+              text: "Do you want to Delete?",
+              icon: "warning",
+              buttons: true,
+              dangerMode: true,
+          })
+          .then(function (isOkay) {
+            if (isOkay) {
+                form.submit();
+            }
+          });
+          return false;
+      }
+    </script>
+    
   </head>
   <style>
       h1 {
