--- a/views/owner.ejs
+++ b/views/owner.ejs
@@ -8,8 +8,8 @@
     <thead>
       <tr>
         <th scope="col">No</th>
-        <th scope="col">Device Mac</th>
-        <th scope="col">Device Hardware</th>
+        <th scope="col">Device Mac (Hardware)</th>
+       
         <th scope="col">User(Email)</th>
        
         
@@ -26,14 +26,14 @@
             <td> <%= (i+1) %> </td>
             
             
-            <td> <%= data[i].mac %> </td>
-            <td> <%= data[i].hwname %> </td>
-            <td> <%= data[i].name %> (<%= data[i].email %> )</td>
+            <td> <%= data[i].mac %> <BR> (<%= data[i].hwname %>) </td>
+          
+            <td> <%= data[i].name %> <BR> (<%= data[i].email %> )</td>
            
             <td> <%= data[i].adddate.toLocaleDateString('el-GR') %> </td>
             
-            <td> <% if(!data[i].sitename) { %> <a href="/owner/site/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-warning"> Set </a> <% }else{ %><%= data[i].sitename %> <a href="/owner/clearsite/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-danger"> Clear </a> <% } %> </td>
-            <td> <% if(!data[i].roomname) { %> <a href="/owner/room/<%= data[i].deviceid %>/<%= data[i].uid %>/<%= data[i].sid %>" class="btn btn-warning"> Set </a> <% }else{ %> <%= data[i].roomname %> <a href="/owner/clearroom/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-danger"> Clear </a> <% } %>  </td>
+            <td> <% if(!data[i].sitename) { %> <a href="/owner/site/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-info"> Set </a> <% }else{ %><%= data[i].sitename %> <a href="/owner/clearsite/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-warning"> Clear </a> <% } %> </td>
+            <td> <% if(!data[i].roomname) { %> <a href="/owner/room/<%= data[i].deviceid %>/<%= data[i].uid %>/<%= data[i].sid %>" class="btn btn-info"> Set </a> <% }else{ %> <%= data[i].roomname %> <a href="/owner/clearroom/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-warning"> Clear </a> <% } %>  </td>
             <td> <%= data[i].ownerComment %> </td>
             <td>  
               <form method="GET" action="/owner/delete/<%= data[i].deviceid %>/<%= data[i].uid %>"  onsubmit="return submitForm(this);">  <input class="btn btn-danger" type="submit" value="Del"/> </form>
