--- a/views/owner.ejs
+++ b/views/owner.ejs
@@ -9,10 +9,7 @@
       <tr>
         <th scope="col">No</th>
         <th scope="col">Device Mac (Hardware)</th>
-       
-        <th scope="col">User(Email)</th>
-       
-        
+        <th scope="col">User(Email)</th> 
         <th scope="col">Add Date</th>
         <th scope="col">Site</th>
         <th scope="col">Room</th>
@@ -20,18 +17,14 @@
         <th scope="col">Action</th>
         <th scope="col">  <a href="/owner/menuinflux" class="btn btn-primary">Add </a> </th>
       </tr>
-
+  </thead>
+  <tbody>
       <% if(data){ for(var i=0;i<data.length;i++){ %>
         <tr>
             <td> <%= (i+1) %> </td>
-            
-            
-            <td> <%= data[i].mac %> <BR> (<%= data[i].hwname %>) </td>
-          
-            <td> <%= data[i].name %> <BR> (<%= data[i].email %> )</td>
-           
-            <td> <%= data[i].adddate.toLocaleDateString('el-GR') %> </td>
-            
+            <td> <%= data[i].mac %> <BR> (<%= data[i].hwname %>) </td>        
+            <td> <%= data[i].name %> </td>        
+            <td> <%= data[i].adddate.toLocaleDateString('el-GR') %> </td>    
             <td> <% if(!data[i].sitename) { %> <a href="/owner/site/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-info"> Set </a> <% }else{ %><%= data[i].sitename %> <a href="/owner/clearsite/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-warning"> Clear </a> <% } %> </td>
             <td> <% if(!data[i].roomname) { %> <a href="/owner/room/<%= data[i].deviceid %>/<%= data[i].uid %>/<%= data[i].sid %>" class="btn btn-info"> Set </a> <% }else{ %> <%= data[i].roomname %> <a href="/owner/clearroom/<%= data[i].deviceid %>/<%= data[i].uid %>" class="btn btn-warning"> Clear </a> <% } %>  </td>
             <td> <%= data[i].ownerComment %> </td>
@@ -46,7 +39,7 @@
 
 
     </thead>
-    <tbody>
-
+  </tbody>
+</table>
 
 <%- include ('_footer') %>
