--- a/views/iotSOS.ejs
+++ b/views/iotSOS.ejs
@@ -20,23 +20,36 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-sm-10 ">
 
 <% if(sosdata!=null){ %>
+    
+            
+        
     <% if(sosdata==1){%> 
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-success btn-lg" type="button"> Status : ONLINE </button>
-        </div>
+        <div class="card bg-success text-white mx-auto" style="width: 16rem;"><div class="card-body"> 
+            SOS Node <p> <h3> Status : ONLINE
+        </h2></p> </div></div> <br>
+    </div>
+        
     <% }%> 
     <% if(sosdata==0){%> 
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-danger btn-lg" type="button"> Status : SOS </button>
-        </div>
-    <% }%> 
-<% }else{ %> 
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-secondary btn-lg" type="button"> Status : OFFLINE </button>
+        <div class="card bg-danger text-white " style="width: 16rem;"><div class="card-body"> 
+            SOS Node <p> <h3> Status : SOS
+        </h2></p> </div></div> <br>
     </div>
+        
+    <% }%> 
+
+<% }else{ %> 
+    <div class="card bg-secondary text-white " style="width: 16rem;"><div class="card-body"> 
+        SOS Node <p> <h3> Status : OFFLINE 
+    </h2></p> </div></div> <br>
+</div>
+    
 <% } %> 
+</div>
 <BR>
 <div class="text-center"> <a href="/owner" class="btn btn-danger"> Back </a>  </div>
         
