--- a/views/owner.ejs
+++ b/views/owner.ejs
@@ -9,7 +9,7 @@
       <tr>
         <th scope="col">No</th>
         <th scope="col">Device Mac (Hardware)</th>
-        <th scope="col">User(Email)</th> 
+        <th scope="col">User</th> 
         <th scope="col">Add Date</th>
         <th scope="col">Site</th>
         <th scope="col">Room</th>
