--- a/views/user/_userheader.ejs
+++ b/views/user/_userheader.ejs
@@ -15,7 +15,7 @@
       }
   </style>
   <body>
- 
+    <% JSON.stringify(session) %>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <a class="navbar-brand" >CPEiot</a>
       <!-- Toggle Btn -->
