--- a/views/user/useradd.ejs
+++ b/views/user/useradd.ejs
@@ -7,7 +7,7 @@
 <div class="d-grid gap-2 col-6 mx-auto">
 
     <% if(datahw){ for(var i=0;i<datahw.length;i++){ %>
-        <button class="btn btn-primary" type="button" onclick="window.location.href='/user/register/<%= datahw[i].hwid %>'"><%= datahw[i].hwname %></button>
+        <button style=" height:60px;width:400px;" class="btn btn-primary" type="button" onclick="window.location.href='/user/register/<%= datahw[i].hwid %>'"><%= datahw[i].hwname %></button>
     <%  } i=0} %>
     </div>
     
