--- a/views/user/userhome.ejs
+++ b/views/user/userhome.ejs
@@ -1,7 +1,25 @@
 <%- include('_userheader') %>
 
-
 <h1> User Home </h1>
+ 
 
+<div class="row">
+    <div class="col-sm-3">
+        <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
+            DEVICE <p> <h3>  <%= owner %>
+        </h2></p> </div></div> <br>
+    </div>
+    <div class="col-sm-3">
+        <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
+            SITE  <p> <h3> <%= site %>
+        </h2></p> </div></div> <br>
+    </div>
+    <div class="col-sm-3">
+        <div class="card bg-primary text-white " style="width: 16rem;"><div class="card-body"> 
+            ROOM <p> <h3> <%= room %>  
+        </h2></p> </div></div> <br>
+    </div>
+        
+</div>
 
 <%- include('_userfooter') %>
